cil/src/frontc/cparser.output
   0  $accept : %entry% $end

   1  interpret : file EOF

   2  file : globals

   3  globals :
   4          | global globals
   5          | SEMICOLON globals

   6  position :

   7  global : declaration
   8         | function_def
   9         | EXTERN string_constant declaration
  10         | EXTERN string_constant LBRACE globals RBRACE
  11         | ASM LPAREN string_constant RPAREN SEMICOLON
  12         | pragma
  13         | IDENT LPAREN old_parameter_list_ne RPAREN old_pardef_list SEMICOLON
  14         | IDENT LPAREN RPAREN SEMICOLON
  15         | AT_TRANSFORM LBRACE global RBRACE IDENT LBRACE globals RBRACE
  16         | AT_TRANSFORMEXPR LBRACE expression RBRACE IDENT LBRACE expression RBRACE
  17         | HIPSPEC
  18         | position error position SEMICOLON

  19  id_or_typename : IDENT
  20                 | NAMED_TYPE
  21                 | AT_NAME LPAREN IDENT RPAREN

  22  maybecomma :
  23             | COMMA

  24  primary_expression : IDENT
  25                     | constant
  26                     | paren_comma_expression
  27                     | LPAREN block RPAREN
  28                     | AT_EXPR LPAREN IDENT RPAREN

  29  postfix_expression : primary_expression
  30                     | postfix_expression bracket_comma_expression
  31                     | postfix_expression LPAREN arguments RPAREN
  32                     | BUILTIN_VA_ARG LPAREN expression COMMA type_name RPAREN
  33                     | BUILTIN_TYPES_COMPAT LPAREN type_name COMMA type_name RPAREN
  34                     | BUILTIN_OFFSETOF LPAREN type_name COMMA offsetof_member_designator RPAREN
  35                     | postfix_expression DOT id_or_typename
  36                     | postfix_expression ARROW id_or_typename
  37                     | postfix_expression PLUS_PLUS
  38                     | postfix_expression MINUS_MINUS
  39                     | LPAREN type_name RPAREN LBRACE initializer_list_opt RBRACE

  40  offsetof_member_designator : id_or_typename
  41                             | offsetof_member_designator DOT IDENT
  42                             | offsetof_member_designator bracket_comma_expression

  43  unary_expression : postfix_expression
  44                   | PLUS_PLUS unary_expression
  45                   | MINUS_MINUS unary_expression
  46                   | SIZEOF unary_expression
  47                   | SIZEOF LPAREN type_name RPAREN
  48                   | ALIGNOF unary_expression
  49                   | ALIGNOF LPAREN type_name RPAREN
  50                   | PLUS cast_expression
  51                   | MINUS cast_expression
  52                   | STAR cast_expression
  53                   | AND cast_expression
  54                   | EXCLAM cast_expression
  55                   | TILDE cast_expression
  56                   | AND_AND IDENT

  57  cast_expression : unary_expression
  58                  | LPAREN type_name RPAREN cast_expression

  59  multiplicative_expression : cast_expression
  60                            | multiplicative_expression STAR cast_expression
  61                            | multiplicative_expression SLASH cast_expression
  62                            | multiplicative_expression PERCENT cast_expression

  63  additive_expression : multiplicative_expression
  64                      | additive_expression PLUS multiplicative_expression
  65                      | additive_expression MINUS multiplicative_expression

  66  shift_expression : additive_expression
  67                   | shift_expression INF_INF additive_expression
  68                   | shift_expression SUP_SUP additive_expression

  69  relational_expression : shift_expression
  70                        | relational_expression INF shift_expression
  71                        | relational_expression SUP shift_expression
  72                        | relational_expression INF_EQ shift_expression
  73                        | relational_expression SUP_EQ shift_expression

  74  equality_expression : relational_expression
  75                      | equality_expression EQ_EQ relational_expression
  76                      | equality_expression EXCLAM_EQ relational_expression

  77  bitwise_and_expression : equality_expression
  78                         | bitwise_and_expression AND equality_expression

  79  bitwise_xor_expression : bitwise_and_expression
  80                         | bitwise_xor_expression CIRC bitwise_and_expression

  81  bitwise_or_expression : bitwise_xor_expression
  82                        | bitwise_or_expression PIPE bitwise_xor_expression

  83  logical_and_expression : bitwise_or_expression
  84                         | logical_and_expression AND_AND bitwise_or_expression

  85  logical_or_expression : logical_and_expression
  86                        | logical_or_expression PIPE_PIPE logical_and_expression

  87  conditional_expression : logical_or_expression
  88                         | logical_or_expression QUEST opt_expression COLON conditional_expression

  89  assignment_expression : conditional_expression
  90                        | cast_expression EQ assignment_expression
  91                        | cast_expression PLUS_EQ assignment_expression
  92                        | cast_expression MINUS_EQ assignment_expression
  93                        | cast_expression STAR_EQ assignment_expression
  94                        | cast_expression SLASH_EQ assignment_expression
  95                        | cast_expression PERCENT_EQ assignment_expression
  96                        | cast_expression AND_EQ assignment_expression
  97                        | cast_expression PIPE_EQ assignment_expression
  98                        | cast_expression CIRC_EQ assignment_expression
  99                        | cast_expression INF_INF_EQ assignment_expression
 100                        | cast_expression SUP_SUP_EQ assignment_expression

 101  expression : assignment_expression

 102  constant : CST_INT
 103           | CST_FLOAT
 104           | CST_CHAR
 105           | CST_WCHAR
 106           | string_constant
 107           | wstring_list

 108  string_constant : string_list

 109  one_string_constant : CST_STRING

 110  string_list : one_string
 111              | string_list one_string

 112  wstring_list : CST_WSTRING
 113               | wstring_list one_string
 114               | wstring_list CST_WSTRING

 115  one_string : CST_STRING
 116             | FUNCTION__
 117             | PRETTY_FUNCTION__

 118  init_expression : expression
 119                  | LBRACE initializer_list_opt RBRACE

 120  initializer_list : initializer
 121                   | initializer COMMA initializer_list_opt

 122  initializer_list_opt :
 123                       | initializer_list

 124  initializer : init_designators eq_opt init_expression
 125              | gcc_init_designators init_expression
 126              | init_expression

 127  eq_opt : EQ
 128         |

 129  init_designators : DOT id_or_typename init_designators_opt
 130                   | LBRACKET expression RBRACKET init_designators_opt
 131                   | LBRACKET expression ELLIPSIS expression RBRACKET

 132  init_designators_opt :
 133                       | init_designators

 134  gcc_init_designators : id_or_typename COLON

 135  arguments :
 136            | comma_expression

 137  opt_expression :
 138                 | comma_expression

 139  comma_expression : expression
 140                   | expression COMMA comma_expression
 141                   | error COMMA comma_expression

 142  comma_expression_opt :
 143                       | comma_expression

 144  paren_comma_expression : LPAREN comma_expression RPAREN
 145                         | LPAREN error RPAREN

 146  bracket_comma_expression : LBRACKET comma_expression RBRACKET
 147                           | LBRACKET error RBRACKET

 148  block : block_begin local_labels block_attrs block_element_list RBRACE
 149        | position error position RBRACE

 150  block_begin : LBRACE

 151  block_attrs :
 152              | BLOCKATTRIBUTE paren_attr_list_ne

 153  block_element_list :
 154                     | declaration block_element_list
 155                     | statement block_element_list
 156                     | IDENT COLON
 157                     | pragma block_element_list

 158  local_labels :
 159               | LABEL__ local_label_names SEMICOLON local_labels

 160  local_label_names : IDENT
 161                    | IDENT COMMA local_label_names

 162  statement : SEMICOLON
 163            | comma_expression SEMICOLON
 164            | block
 165            | IF paren_comma_expression statement
 166            | IF paren_comma_expression statement ELSE statement
 167            | SWITCH paren_comma_expression statement
 168            | WHILE paren_comma_expression opt_hip_function_spec statement
 169            | DO opt_hip_function_spec statement WHILE paren_comma_expression SEMICOLON
 170            | FOR LPAREN for_clause opt_expression SEMICOLON opt_expression RPAREN opt_hip_function_spec statement
 171            | IDENT COLON attribute_nocv_list statement
 172            | CASE expression COLON statement
 173            | CASE expression ELLIPSIS expression COLON statement
 174            | DEFAULT COLON statement
 175            | RETURN SEMICOLON
 176            | RETURN comma_expression SEMICOLON
 177            | BREAK SEMICOLON
 178            | CONTINUE SEMICOLON
 179            | GOTO IDENT SEMICOLON
 180            | GOTO STAR comma_expression SEMICOLON
 181            | ASM asmattr LPAREN asmtemplate asmoutputs RPAREN SEMICOLON
 182            | MSASM
 183            | TRY block EXCEPT paren_comma_expression block
 184            | TRY block FINALLY block
 185            | position error position SEMICOLON
 186            | HIPSPEC

 187  for_clause : opt_expression SEMICOLON
 188             | declaration

 189  declaration : decl_spec_list init_declarator_list SEMICOLON
 190              | decl_spec_list SEMICOLON

 191  init_declarator_list : init_declarator
 192                       | init_declarator COMMA init_declarator_list

 193  init_declarator : declarator
 194                  | declarator EQ init_expression

 195  decl_spec_list : TYPEDEF decl_spec_list_opt
 196                 | EXTERN decl_spec_list_opt
 197                 | STATIC decl_spec_list_opt
 198                 | AUTO decl_spec_list_opt
 199                 | REGISTER decl_spec_list_opt
 200                 | type_spec decl_spec_list_opt_no_named
 201                 | INLINE decl_spec_list_opt
 202                 | cvspec decl_spec_list_opt
 203                 | attribute_nocv decl_spec_list_opt
 204                 | AT_SPECIFIER LPAREN IDENT RPAREN

 205  decl_spec_list_opt :
 206                     | decl_spec_list

 207  decl_spec_list_opt_no_named :
 208                              | decl_spec_list

 209  type_spec : VOID
 210            | CHAR
 211            | BOOL
 212            | SHORT
 213            | INT
 214            | LONG
 215            | INT64
 216            | FLOAT
 217            | DOUBLE
 218            | SIGNED
 219            | UNSIGNED
 220            | STRUCT id_or_typename
 221            | STRUCT just_attributes id_or_typename
 222            | STRUCT id_or_typename LBRACE struct_decl_list RBRACE
 223            | STRUCT LBRACE struct_decl_list RBRACE
 224            | STRUCT just_attributes id_or_typename LBRACE struct_decl_list RBRACE
 225            | STRUCT just_attributes LBRACE struct_decl_list RBRACE
 226            | UNION id_or_typename
 227            | UNION id_or_typename LBRACE struct_decl_list RBRACE
 228            | UNION LBRACE struct_decl_list RBRACE
 229            | UNION just_attributes id_or_typename LBRACE struct_decl_list RBRACE
 230            | UNION just_attributes LBRACE struct_decl_list RBRACE
 231            | ENUM id_or_typename
 232            | ENUM id_or_typename LBRACE enum_list maybecomma RBRACE
 233            | ENUM LBRACE enum_list maybecomma RBRACE
 234            | ENUM just_attributes id_or_typename LBRACE enum_list maybecomma RBRACE
 235            | ENUM just_attributes LBRACE enum_list maybecomma RBRACE
 236            | NAMED_TYPE
 237            | TYPEOF LPAREN expression RPAREN
 238            | TYPEOF LPAREN type_name RPAREN

 239  struct_decl_list :
 240                   | decl_spec_list SEMICOLON struct_decl_list
 241                   | SEMICOLON struct_decl_list
 242                   | decl_spec_list field_decl_list SEMICOLON struct_decl_list
 243                   | pragma struct_decl_list
 244                   | error SEMICOLON struct_decl_list

 245  field_decl_list : field_decl
 246                  | field_decl COMMA field_decl_list

 247  field_decl : declarator
 248             | declarator COLON expression attributes
 249             | COLON expression

 250  enum_list : enumerator
 251            | enum_list COMMA enumerator
 252            | enum_list COMMA error

 253  enumerator : IDENT
 254             | IDENT EQ expression

 255  declarator : pointer_opt direct_decl attributes_with_asm

 256  direct_decl : id_or_typename
 257              | LPAREN attributes declarator RPAREN
 258              | direct_decl LBRACKET attributes comma_expression_opt RBRACKET
 259              | direct_decl LBRACKET attributes error RBRACKET
 260              | direct_decl parameter_list_startscope rest_par_list RPAREN

 261  parameter_list_startscope : LPAREN

 262  rest_par_list :
 263                | parameter_decl rest_par_list1

 264  rest_par_list1 :
 265                 | COMMA ELLIPSIS
 266                 | COMMA parameter_decl rest_par_list1

 267  parameter_decl : decl_spec_list declarator
 268                 | decl_spec_list abstract_decl
 269                 | decl_spec_list
 270                 | LPAREN parameter_decl RPAREN

 271  old_proto_decl : pointer_opt direct_old_proto_decl

 272  direct_old_proto_decl : direct_decl LPAREN old_parameter_list_ne RPAREN old_pardef_list
 273                        | direct_decl LPAREN RPAREN

 274  old_parameter_list_ne : IDENT
 275                        | IDENT COMMA old_parameter_list_ne

 276  old_pardef_list :
 277                  | decl_spec_list old_pardef SEMICOLON ELLIPSIS
 278                  | decl_spec_list old_pardef SEMICOLON old_pardef_list

 279  old_pardef : declarator
 280             | declarator COMMA old_pardef
 281             | error

 282  pointer : STAR attributes pointer_opt

 283  pointer_opt :
 284              | pointer

 285  type_name : decl_spec_list abstract_decl
 286            | decl_spec_list

 287  abstract_decl : pointer_opt abs_direct_decl attributes
 288                | pointer

 289  abs_direct_decl : LPAREN attributes abstract_decl RPAREN
 290                  | LPAREN error RPAREN
 291                  | abs_direct_decl_opt LBRACKET comma_expression_opt RBRACKET
 292                  | abs_direct_decl parameter_list_startscope rest_par_list RPAREN

 293  abs_direct_decl_opt : abs_direct_decl
 294                      |

 295  function_def : function_def_start opt_hip_function_spec block
 296               | function_def_start opt_hip_function_spec SEMICOLON

 297  function_def_start : decl_spec_list declarator
 298                     | decl_spec_list old_proto_decl
 299                     | IDENT parameter_list_startscope rest_par_list RPAREN
 300                     | IDENT LPAREN old_parameter_list_ne RPAREN old_pardef_list
 301                     | IDENT LPAREN RPAREN

 302  cvspec : CONST
 303         | VOLATILE
 304         | RESTRICT

 305  attributes :
 306             | attribute attributes

 307  attributes_with_asm :
 308                      | attribute attributes_with_asm
 309                      | ASM LPAREN string_constant RPAREN attributes

 310  attribute_nocv : ATTRIBUTE LPAREN paren_attr_list RPAREN
 311                 | DECLSPEC paren_attr_list_ne
 312                 | MSATTR
 313                 | THREAD
 314                 | QUALIFIER

 315  attribute_nocv_list :
 316                      | attribute_nocv attribute_nocv_list

 317  attribute : attribute_nocv
 318            | CONST
 319            | RESTRICT
 320            | VOLATILE

 321  just_attribute : ATTRIBUTE LPAREN paren_attr_list RPAREN
 322                 | DECLSPEC paren_attr_list_ne

 323  just_attributes : just_attribute
 324                  | just_attribute just_attributes

 325  pragma : PRAGMA attr PRAGMA_EOL
 326         | PRAGMA attr SEMICOLON PRAGMA_EOL
 327         | PRAGMA_LINE

 328  primary_attr : IDENT
 329               | NAMED_TYPE
 330               | LPAREN attr RPAREN
 331               | IDENT IDENT
 332               | CST_INT
 333               | string_constant
 334               | CONST
 335               | IDENT COLON CST_INT
 336               | CST_INT COLON CST_INT
 337               | DEFAULT COLON CST_INT
 338               | VOLATILE

 339  postfix_attr : primary_attr
 340               | IDENT LPAREN RPAREN
 341               | IDENT paren_attr_list_ne
 342               | postfix_attr ARROW id_or_typename
 343               | postfix_attr DOT id_or_typename
 344               | postfix_attr LBRACKET attr RBRACKET

 345  unary_attr : postfix_attr
 346             | SIZEOF unary_expression
 347             | SIZEOF LPAREN type_name RPAREN
 348             | ALIGNOF unary_expression
 349             | ALIGNOF LPAREN type_name RPAREN
 350             | PLUS cast_attr
 351             | MINUS cast_attr
 352             | STAR cast_attr
 353             | AND cast_attr
 354             | EXCLAM cast_attr
 355             | TILDE cast_attr

 356  cast_attr : unary_attr

 357  multiplicative_attr : cast_attr
 358                      | multiplicative_attr STAR cast_attr
 359                      | multiplicative_attr SLASH cast_attr
 360                      | multiplicative_attr PERCENT cast_attr

 361  additive_attr : multiplicative_attr
 362                | additive_attr PLUS multiplicative_attr
 363                | additive_attr MINUS multiplicative_attr

 364  shift_attr : additive_attr
 365             | shift_attr INF_INF additive_attr
 366             | shift_attr SUP_SUP additive_attr

 367  relational_attr : shift_attr
 368                  | relational_attr INF shift_attr
 369                  | relational_attr SUP shift_attr
 370                  | relational_attr INF_EQ shift_attr
 371                  | relational_attr SUP_EQ shift_attr

 372  equality_attr : relational_attr
 373                | equality_attr EQ_EQ relational_attr
 374                | equality_attr EXCLAM_EQ relational_attr

 375  bitwise_and_attr : equality_attr
 376                   | bitwise_and_attr AND equality_attr

 377  bitwise_xor_attr : bitwise_and_attr
 378                   | bitwise_xor_attr CIRC bitwise_and_attr

 379  bitwise_or_attr : bitwise_xor_attr
 380                  | bitwise_or_attr PIPE bitwise_xor_attr

 381  logical_and_attr : bitwise_or_attr
 382                   | logical_and_attr AND_AND bitwise_or_attr

 383  logical_or_attr : logical_and_attr
 384                  | logical_or_attr PIPE_PIPE logical_and_attr

 385  conditional_attr : logical_or_attr
 386                   | logical_or_attr QUEST conditional_attr COLON conditional_attr

 387  attr : conditional_attr

 388  attr_list_ne : attr
 389               | attr COMMA attr_list_ne
 390               | error COMMA attr_list_ne

 391  attr_list :
 392            | attr_list_ne

 393  paren_attr_list_ne : LPAREN attr_list_ne RPAREN
 394                     | LPAREN error RPAREN

 395  paren_attr_list : LPAREN attr_list RPAREN
 396                  | LPAREN error RPAREN

 397  asmattr :
 398          | VOLATILE asmattr
 399          | CONST asmattr

 400  asmtemplate : one_string_constant
 401              | one_string_constant asmtemplate

 402  asmoutputs :
 403             | COLON asmoperands asminputs

 404  asmoperands :
 405              | asmoperandsne

 406  asmoperandsne : asmoperand
 407                | asmoperandsne COMMA asmoperand

 408  asmoperand : asmopname string_constant LPAREN expression RPAREN
 409             | asmopname string_constant LPAREN error RPAREN

 410  asminputs :
 411            | COLON asmoperands asmclobber

 412  asmopname :
 413            | LBRACKET IDENT RBRACKET

 414  asmclobber :
 415             | COLON asmcloberlst_ne

 416  asmcloberlst_ne : one_string_constant
 417                  | one_string_constant COMMA asmcloberlst_ne

 418  opt_hip_function_spec :
 419                        | HIPSPEC

 420  %entry% : '\001' interpret
 421          | '\002' file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . interpret  (420)
	globals : .  (3)
	position : .  (6)

	IDENT  shift 4
	QUALIFIER  shift 5
	NAMED_TYPE  shift 6
	HIPSPEC  shift 7
	CHAR  shift 8
	INT  shift 9
	BOOL  shift 10
	DOUBLE  shift 11
	FLOAT  shift 12
	VOID  shift 13
	INT64  shift 14
	ENUM  shift 15
	STRUCT  shift 16
	TYPEDEF  shift 17
	UNION  shift 18
	SIGNED  shift 19
	UNSIGNED  shift 20
	LONG  shift 21
	SHORT  shift 22
	VOLATILE  shift 23
	EXTERN  shift 24
	STATIC  shift 25
	CONST  shift 26
	RESTRICT  shift 27
	AUTO  shift 28
	REGISTER  shift 29
	THREAD  shift 30
	SEMICOLON  shift 31
	ATTRIBUTE  shift 32
	INLINE  shift 33
	ASM  shift 34
	TYPEOF  shift 35
	DECLSPEC  shift 36
	MSATTR  shift 37
	PRAGMA_LINE  shift 38
	PRAGMA  shift 39
	AT_TRANSFORM  shift 40
	AT_TRANSFORMEXPR  shift 41
	AT_SPECIFIER  shift 42
	error  reduce 6
	EOF  reduce 3

	interpret  goto 43
	file  goto 44
	globals  goto 45
	global  goto 46
	decl_spec_list  goto 47
	type_spec  goto 48
	declaration  goto 49
	function_def  goto 50
	function_def_start  goto 51
	position  goto 52
	cvspec  goto 53
	pragma  goto 54
	attribute_nocv  goto 55


state 2
	%entry% : '\002' . file  (421)
	globals : .  (3)
	position : .  (6)

	IDENT  shift 4
	QUALIFIER  shift 5
	NAMED_TYPE  shift 6
	HIPSPEC  shift 7
	CHAR  shift 8
	INT  shift 9
	BOOL  shift 10
	DOUBLE  shift 11
	FLOAT  shift 12
	VOID  shift 13
	INT64  shift 14
	ENUM  shift 15
	STRUCT  shift 16
	TYPEDEF  shift 17
	UNION  shift 18
	SIGNED  shift 19
	UNSIGNED  shift 20
	LONG  shift 21
	SHORT  shift 22
	VOLATILE  shift 23
	EXTERN  shift 24
	STATIC  shift 25
	CONST  shift 26
	RESTRICT  shift 27
	AUTO  shift 28
	REGISTER  shift 29
	THREAD  shift 30
	SEMICOLON  shift 31
	ATTRIBUTE  shift 32
	INLINE  shift 33
	ASM  shift 34
	TYPEOF  shift 35
	DECLSPEC  shift 36
	MSATTR  shift 37
	PRAGMA_LINE  shift 38
	PRAGMA  shift 39
	AT_TRANSFORM  shift 40
	AT_TRANSFORMEXPR  shift 41
	AT_SPECIFIER  shift 42
	$end  reduce 3
	error  reduce 6

	file  goto 56
	globals  goto 45
	global  goto 46
	decl_spec_list  goto 47
	type_spec  goto 48
	declaration  goto 49
	function_def  goto 50
	function_def_start  goto 51
	position  goto 52
	cvspec  goto 53
	pragma  goto 54
	attribute_nocv  goto 55


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	global : IDENT . LPAREN old_parameter_list_ne RPAREN old_pardef_list SEMICOLON  (13)
	global : IDENT . LPAREN RPAREN SEMICOLON  (14)
	function_def_start : IDENT . parameter_list_startscope rest_par_list RPAREN  (299)
	function_def_start : IDENT . LPAREN old_parameter_list_ne RPAREN old_pardef_list  (300)
	function_def_start : IDENT . LPAREN RPAREN  (301)

	LPAREN  shift 57
	.  error

	parameter_list_startscope  goto 58


state 5
	attribute_nocv : QUALIFIER .  (314)

	.  reduce 314


state 6
	type_spec : NAMED_TYPE .  (236)

	.  reduce 236


state 7
	global : HIPSPEC .  (17)

	.  reduce 17


state 8
	type_spec : CHAR .  (210)

	.  reduce 210


state 9
	type_spec : INT .  (213)

	.  reduce 213


state 10
	type_spec : BOOL .  (211)

	.  reduce 211


state 11
	type_spec : DOUBLE .  (217)

	.  reduce 217


state 12
	type_spec : FLOAT .  (216)

	.  reduce 216


state 13
	type_spec : VOID .  (209)

	.  reduce 209


state 14
	type_spec : INT64 .  (215)

	.  reduce 215


state 15
	type_spec : ENUM . id_or_typename  (231)
	type_spec : ENUM . id_or_typename LBRACE enum_list maybecomma RBRACE  (232)
	type_spec : ENUM . LBRACE enum_list maybecomma RBRACE  (233)
	type_spec : ENUM . just_attributes id_or_typename LBRACE enum_list maybecomma RBRACE  (234)
	type_spec : ENUM . just_attributes LBRACE enum_list maybecomma RBRACE  (235)

	IDENT  shift 59
	NAMED_TYPE  shift 60
	LBRACE  shift 61
	ATTRIBUTE  shift 62
	DECLSPEC  shift 63
	AT_NAME  shift 64
	.  error

	id_or_typename  goto 65
	just_attributes  goto 66
	just_attribute  goto 67


state 16
	type_spec : STRUCT . id_or_typename  (220)
	type_spec : STRUCT . just_attributes id_or_typename  (221)
	type_spec : STRUCT . id_or_typename LBRACE struct_decl_list RBRACE  (222)
	type_spec : STRUCT . LBRACE struct_decl_list RBRACE  (223)
	type_spec : STRUCT . just_attributes id_or_typename LBRACE struct_decl_list RBRACE  (224)
	type_spec : STRUCT . just_attributes LBRACE struct_decl_list RBRACE  (225)

	IDENT  shift 59
	NAMED_TYPE  shift 60
	LBRACE  shift 68
	ATTRIBUTE  shift 62
	DECLSPEC  shift 63
	AT_NAME  shift 64
	.  error

	id_or_typename  goto 69
	just_attributes  goto 70
	just_attribute  goto 67


state 17
	decl_spec_list : TYPEDEF . decl_spec_list_opt  (195)
	decl_spec_list_opt : .  (205)

	QUALIFIER  shift 5
	NAMED_TYPE  shift 6
	CHAR  shift 8
	INT  shift 9
	BOOL  shift 10
	DOUBLE  shift 11
	FLOAT  shift 12
	VOID  shift 13
	INT64  shift 14
	ENUM  shift 15
	STRUCT  shift 16
	TYPEDEF  shift 17
	UNION  shift 18
	SIGNED  shift 19
	UNSIGNED  shift 20
	LONG  shift 21
	SHORT  shift 22
	VOLATILE  shift 23
	EXTERN  shift 71
	STATIC  shift 25
	CONST  shift 26
	RESTRICT  shift 27
	AUTO  shift 28
	REGISTER  shift 29
	THREAD  shift 30
	ATTRIBUTE  shift 32
	INLINE  shift 33
	TYPEOF  shift 35
	DECLSPEC  shift 36
	MSATTR  shift 37
	AT_SPECIFIER  shift 42
	error  reduce 205
	IDENT  reduce 205
	STAR  reduce 205
	RPAREN  reduce 205
	LPAREN  reduce 205
	LBRACKET  reduce 205
	COLON  reduce 205
	SEMICOLON  reduce 205
	COMMA  reduce 205
	AT_NAME  reduce 205

	decl_spec_list  goto 72
	type_spec  goto 48
	cvspec  goto 53
	decl_spec_list_opt  goto 73
	attribute_nocv  goto 55


state 18
	type_spec : UNION . id_or_typename  (226)
	type_spec : UNION . id_or_typename LBRACE struct_decl_list RBRACE  (227)
	type_spec : UNION . LBRACE struct_decl_list RBRACE  (228)
	type_spec : UNION . just_attributes id_or_typename LBRACE struct_decl_list RBRACE  (229)
	type_spec : UNION . just_attributes LBRACE struct_decl_list RBRACE  (230)

	IDENT  shift 59
	NAMED_TYPE  shift 60
	LBRACE  shift 74
	ATTRIBUTE  shift 62
	DECLSPEC  shift 63
	AT_NAME  shift 64
	.  error

	id_or_typename  goto 75
	just_attributes  goto 76
	just_attribute  goto 67


state 19
	type_spec : SIGNED .  (218)

	.  reduce 218


state 20
	type_spec : UNSIGNED .  (219)

	.  reduce 219


state 21
	type_spec : LONG .  (214)

	.  reduce 214


state 22
	type_spec : SHORT .  (212)

	.  reduce 212


state 23
	cvspec : VOLATILE .  (303)

	.  reduce 303


state 24
	global : EXTERN . string_constant declaration  (9)
	global : EXTERN . string_constant LBRACE globals RBRACE  (10)
	decl_spec_list : EXTERN . decl_spec_list_opt  (196)
	decl_spec_list_opt : .  (205)

	QUALIFIER  shift 5
	NAMED_TYPE  shift 6
	CST_STRING  shift 77
	CHAR  shift 8
	INT  shift 9
	BOOL  shift 10
	DOUBLE  shift 11
	FLOAT  shift 12
	VOID  shift 13
	INT64  shift 14
	ENUM  shift 15
	STRUCT  shift 16
	TYPEDEF  shift 17
	UNION  shift 18
	SIGNED  shift 19
	UNSIGNED  shift 20
	LONG  shift 21
	SHORT  shift 22
	VOLATILE  shift 23
	EXTERN  shift 71
	STATIC  shift 25
	CONST  shift 26
	RESTRICT  shift 27
	AUTO  shift 28
	REGISTER  shift 29
	THREAD  shift 30
	ATTRIBUTE  shift 32
	INLINE  shift 33
	TYPEOF  shift 35
	FUNCTION__  shift 78
	PRETTY_FUNCTION__  shift 79
	DECLSPEC  shift 36
	MSATTR  shift 37
	AT_SPECIFIER  shift 42
	IDENT  reduce 205
	STAR  reduce 205
	LPAREN  reduce 205
	SEMICOLON  reduce 205
	AT_NAME  reduce 205

	string_constant  goto 80
	string_list  goto 81
	decl_spec_list  goto 72
	type_spec  goto 48
	cvspec  goto 53
	one_string  goto 82
	decl_spec_list_opt  goto 83
	attribute_nocv  goto 55


state 25
	decl_spec_list : STATIC . decl_spec_list_opt  (197)
	decl_spec_list_opt : .  (205)
